# text-embedding-classification-benchmark

./: .env.example  .gitignore  README.md  pyproject.toml  run_all_experiments.sh
datasets/: CSTR.csv  SyskillWebert.csv  sms_spam.csv
src/analysis/: __main__.py  dataset_analysis.py
src/embeddings_pipeline/: __main__.py  cache.py  cli.py  config.py  dataset.py  experiment.py  representations.py  utils.py
tests/: test_cache.py  test_dataset.py  test_experiment.py  test_representations.py
