[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "embeddings-new"
version = "0.1.0"
description = "Text classification pipeline with reusable embedding caches."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "scikit-learn>=1.5",
  "python-dotenv>=1.0",
  "matplotlib>=3.8",
  "sentence-transformers>=3.0",
  "torch>=2.2",
  "openai>=1.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
